# greeter_gRpc

.cargo/: config
proto/: Cargo.toml  build.rs  build.sh  build_test.sh  greeter.desc  singleling.sh
proto/.cargo/: config
proto/proto/greeter/: helloworld.proto
proto/src/: lib.rs
src/client/: client.rs
src/server/: server.rs
