[package]
name = "grpcio-proto"
version = "0.2.0"
authors = ["Lemures <martinsmith3d.art@gmail.com>"]

build = "build.rs"

[dependencies]
protobuf = "1.2"
futures = "0.1"
grpcio = { version = "0.2.0", features = ["secure"] }

[build-dependencies]
protobuf = "1.2"
grpcio-compiler = { version = "0.2.0" }
